samples/_failures_safe/1761072574_7bddc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f39c16a.c: In function ‘main’:
./samples/SAFE/__tmp_8f39c16a.c:154:15: error: expected ‘;’ at end of input
  154 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_8f39c16a.c:154:9: error: expected declaration or statement at end of input
  154 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_8f39c16a.c:154:9: error: expected declaration or statement at end of input
